Fix javadoc bug